--- a/asiaccs/paper.bib
+++ b/asiaccs/paper.bib
@@ -605,3 +605,26 @@ title = "{EU Proposal for a Directive of The European Parliament and of the Coun
 year = 2016,
 howpublished = "\url{https://ec.europa.eu/transparency/regdoc/rep/1/2016/EN/1-2016-593-EN-F1-1.PDF}"
 }
+
+@article{Reiter:1999:AWT:293411.293778,
+ author = {Reiter, Michael K. and Rubin, Aviel D.},
+ title = {Anonymous Web Transactions with Crowds},
+ journal = {Commun. ACM},
+ issue_date = {Feb. 1999},
+ volume = {42},
+ number = {2},
+ month = feb,
+ year = {1999},
+ issn = {0001-0782},
+ pages = {32--48},
+ numpages = {17},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@INPROCEEDINGS{8418599,
+author={D. {Das} and S. {Meiser} and E. {Mohammadi} and A. {Kate}},
+booktitle={2018 IEEE Symposium on Security and Privacy (SP)},
+title={Anonymity Trilemma: Strong Anonymity, Low Bandwidth Overhead, Low Latency - Choose Two},
+year={2018},
+month={May}}
